# LogPy

./: .gitignore  README.cn.md  README.md  Taskfile.yml  conftest.py  pyproject.toml  release.py  run_tests.py  tasks.py
doc/: ai.md  cmd.md
hooks/: post-push.sh  pre-push.sh  release.py
log/: ConsoleLog78.cs  FileLog78.cs  FileLogDetail.cs  IConsoleLog78.cs  IFileLog78.cs  ILog78.cs  IServerLog78.cs  Log78.cs  LogEntry.cs  LogstashServerLog78.cs
src/: console_log78.py  file_log78.py  iconsole_log78.py  ifile_log78.py  iserver_log78.py  log78.py  log_entry.py  logstash_server_log78.py
src/log78/: __init__.py  console_log78.py  file_log78.py  file_log_detail.py  iconsole_log78.py  ifile_log78.py  ilog78.py  iserver_log78.py  kafka_server_log78.py  log78.py  log_entry.py  logger78.py  logstash_server_log78.py  main.py
src/www778878net/: __init__.py  file_log78.py  ilog78.py  log78.py  logstash_server_log78.py  main.py
tests/: Test78.cs  conftest.py  test_custom_log_entry.py  test_log78.py  test_log_entry.py  test_logstash_server_log78.py
