[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "log78"
version = "2.0.16"
description = "A flexible Python logging library supporting console, file, and server logging."
authors = ["Frieda.Hu <www778878net@189.cn>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/www778878net/Log78"
repository = "https://github.com/www778878net/Log78.git"
documentation = "https://github.com/www778878net/Log78"
keywords = ["logging", "debug", "development"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^0.6.0"
aiohttp = "^3.7.4"
loguru = "^0.7.0"  # 添加这一行
aiokafka = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"  # 更新到最新的主要版本
pytest-asyncio = "^0.18.3"
black = "^22.3.0"
docutils = "^0.21.2"
invoke = "^1.7.0"  # 添加 invoke 依赖

[tool.poetry.scripts]
build = "tasks:build"
install = "tasks:install"
test = "pytest:main"
all = "tasks:run_all"
setup = "tasks:setup"
publish = "tasks:publish"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
twine = "^5.1.1"

[tool.pytest.ini_options]
addopts = "-v"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["log78*"]
exclude = ["tests*"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"



